syntax = "proto3";

package proto;
option go_package = "/pb";

message TokenRequest {
    string userId = 1;
    string token = 2;
}

message TokenResponse {
    bool success = 1;
    string error_message = 2;
}

