syntax = "proto3";

package proto;

option go_package = "remind/notification/pb";



message MessageRequest {
    string userId = 1;
    string title = 2;
    string body = 3;
}

message MessageResponse {
    bool success = 1;
    string error_message = 2;
}
